@@ -50,6 +50,11 @@ Changes in version 0.2.0.3-alpha - 2007-??-??
     - Stop under-counting the number of authorities that recommend each
       version. [Bugfix on 0.1.2.x]
 
+  o Minor bugfixes (guard nodes):
+    - If there's a never-before-connected-to guard node in our list,
+      never choose any guards past it. This way we don't expand our
+      guard list unless we need to. [Bugfix in 0.1.2.x]
+
 
 Changes in version 0.2.0.2-alpha - 2007-06-02
   o Major bugfixes on 0.2.0.1-alpha:
